--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "taller-motos": {
+    "ferreterias": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -12,12 +12,12 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "mot",
+      "prefix": "ferr",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/taller-motos",
+            "outputPath": "dist/ferreterias",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "taller-motos:build"
+            "browserTarget": "ferreterias:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "taller-motos:build:production"
+              "browserTarget": "ferreterias:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "taller-motos:build"
+            "browserTarget": "ferreterias:build"
           }
         },
         "test": {
@@ -117,15 +117,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "taller-motos:serve"
+            "devServerTarget": "ferreterias:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "taller-motos:serve:production"
+              "devServerTarget": "ferreterias:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "taller-motos"
+  "defaultProject": "ferreterias"
 }
